--- a/app.html
+++ b/app.html
@@ -5,12 +5,7 @@
     <title>iTunes</title>
     <script src="https://cdn.polyfill.io/v1/polyfill.js?features=fetch,localStorage"></script>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-
-    <style>
-        .albumItem {
-            display:inline;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 
 </head>
 <body>
